# kable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  editor.rst  explorer.rst  index.rst  main.rst  utils.rst
kable/: editor.py  explorer.py  main.py  styles.txt  utils.py
main/: __init__.py  explorer.py  main.py  styles.txt  utils.py
