[project]
name = "kable"
version = "0.4.1"
description = "A Textual-based terminal IDE written in Python."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }

authors = [
    { name = "python-neo" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Editors",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=8.2.7",
]

[project.urls]
Repository = "https://github.com/python-neo/kable"
Issues = "https://github.com/python-neo/kable/issues"
Changelog = "https://github.com/python-neo/kable/blob/main/CHANGELOG.md"
Contributing = "https://github.com/python-neo/kable/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]

[project.scripts]
kable = "main.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["main"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E701"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "cr-lf"