[project]
name = "kable"
version = "0.5.1"
description = "A Textual-based terminal IDE written in Python."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "python-neo" }
]

classifiers = [
    "Development Status :: 3 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Editors",
]

dependencies = [
    "textual>=8.2.7",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/python-neo/kable"
Issues = "https://github.com/python-neo/kable/issues"
Changelog = "https://github.com/python-neo/kable/blob/main/CHANGELOG.md"
Contributing = "https://github.com/python-neo/kable/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.16",
]
docs = [
    "sphinx>=8.3.0",
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.2.0",
]

[project.scripts]
kable = "kable.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kable"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E701"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "cr-lf"
